hw3: add links to notebooks

--- a/hw3/hw3.tex
+++ b/hw3/hw3.tex
@@ -171,7 +171,8 @@ what to do when $n_i = 0$.
 	\label{fig:difference}
 \end{figure}
 
-The code used is available online at
+The code is available online at the following links: \href{https://github.com/cmhainje/exgal-hw/blob/main/hw3/series.nb}{Mathematica notebook}
+and \href{https://github.com/cmhainje/exgal-hw/blob/main/hw3/numerics.ipynb}{Jupyter notebook}.
 
 
 \end{document}
